completed (main page)

--- a/index.html
+++ b/index.html
@@ -1362,31 +1362,31 @@
           <table>
             <tr class="table__row-first">
               <td>Размер картины</td>
-              <td class="table__first table__first--1">30x40</td>
-              <td class="table__first table__first--2">40x40</td>
-              <td class="table__first table__first--3">40x50</td>
-              <td class="table__first table__first--4">40x60</td>
-              <td class="table__first table__first--5">50x50</td>
-              <td class="table__first table__first--6">50x60</td>
-              <td class="table__first table__first--7">50x70</td>
-              <td class="table__first table__first--8">55x80</td>
-              <td class="table__first table__first--9">60x90</td>
-              <td class="table__first table__first--10">70x100</td>
-              <td class="table__first table__first--11">80x120</td>
+              <td class="table__first table__first--1" data-js-table-first>30x40</td>
+              <td class="table__first table__first--2" data-js-table-first>40x40</td>
+              <td class="table__first table__first--3" data-js-table-first>40x50</td>
+              <td class="table__first table__first--4" data-js-table-first>40x60</td>
+              <td class="table__first table__first--5" data-js-table-first>50x50</td>
+              <td class="table__first table__first--6" data-js-table-first>50x60</td>
+              <td class="table__first table__first--7" data-js-table-first>50x70</td>
+              <td class="table__first table__first--8" data-js-table-first>55x80</td>
+              <td class="table__first table__first--9" data-js-table-first>60x90</td>
+              <td class="table__first table__first--10" data-js-table-first>70x100</td>
+              <td class="table__first table__first--11" data-js-table-first>80x120</td>
             </tr>
             <tr class="table__row-second">
               <td>Стоимость</td>
-              <td class="table__second table__second--1">1990 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--2">2400 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--3">2550 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--4">2550 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--5">2650 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--6">2850 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--7">3100 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--8">3500 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--9">4550 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--10">4950 <span class="mini-ruble">₽</span></td>
-              <td class="table__second table__second--11">5500 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--1" data-js-table-second>1990 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--2"  data-js-table-second>2400 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--3" data-js-table-second>2550 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--4" data-js-table-second>2550 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--5" data-js-table-second>2650 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--6" data-js-table-second>2850 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--7" data-js-table-second>3100 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--8" data-js-table-second>3500 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--9" data-js-table-second>4550 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--10" data-js-table-second>4950 <span class="mini-ruble">₽</span></td>
+              <td class="table__second table__second--11" data-js-table-second>5500 <span class="mini-ruble">₽</span></td>
             </tr>
           </table>
         </div>
